# ripple

./: Cargo.toml  README.md
migrations/2022-05-18-225903_ripple/: down.sql  up.sql
src/: errors.rs  main.rs  models.rs  schema.rs  services.rs  spotify.rs
src/services/: account.rs  home.rs  index.rs  login.rs  logout.rs  register.rs  spotify_connect.rs  user_profile.rs
templates/: account.html  base.html  home.html  login.html  register.html  spotify_connect.html  user_profile.html
templates/home/: base.html  spotify_connected.html  spotify_disconnected.html
