[package]
name = "ripple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
tera = "1.15"
serde = "1.0"
dotenv = "0.15.0"
diesel = { version = "1.4.8", features = ["postgres", "chrono", "r2d2"] }
actix-identity = "0.3"
chrono = { version = "0.4", features = ["serde"] }
argonautica = "0.2"
r2d2 = "0.8"
env_logger = "0.8"
log = "0.4"
rand = "0.8"
validator = { version = "0.15", features = ["derive"] }
regex = "1.5"
lazy_static = "1.4"
